--- a/index.html
+++ b/index.html
@@ -34,406 +34,8 @@
             </div>
         </div>
     </div>
-    <div class="stars">
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div><div class="starItems"></div>
-        <div class="starItems"></div><div class="starItems"></div>
-        <div class="starItems"></div><div class="starItems"></div>
-        <div class="starItems"></div><div class="starItems"></div>
-        <div class="starItems"></div><div class="starItems"></div>
-        <div class="starItems"></div><div class="starItems"></div>
-        <div class="starItems"></div><div class="starItems"></div>
-        <div class="starItems"></div><div class="starItems"></div>
-        <div class="starItems"></div><div class="starItems"></div>
-        <div class="starItems"></div><div class="starItems"></div>
-        <div class="starItems"></div><div class="starItems"></div>
-        <div class="starItems"></div><div class="starItems"></div>
-        <div class="starItems"></div><div class="starItems"></div>
-        <div class="starItems"></div><div class="starItems"></div>
-        <div class="starItems"></div><div class="starItems"></div>
-        <div class="starItems"></div><div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div><div class="starItems"></div>
-        <div class="starItems"></div><div class="starItems"></div>
-        <div class="starItems"></div><div class="starItems"></div>
-        <div class="starItems"></div><div class="starItems"></div>
-        <div class="starItems"></div><div class="starItems"></div>
-        <div class="starItems"></div><div class="starItems"></div>
-        <div class="starItems"></div><div class="starItems"></div>
-        <div class="starItems"></div><div class="starItems"></div>
-        <div class="starItems"></div><div class="starItems"></div>
-        <div class="starItems"></div><div class="starItems"></div>
-        <div class="starItems"></div><div class="starItems"></div>
-        <div class="starItems"></div><div class="starItems"></div>
-        <div class="starItems"></div><div class="starItems"></div>
-        <div class="starItems"></div><div class="starItems"></div>
-        <div class="starItems"></div><div class="starItems"></div>
-        <div class="starItems"></div><div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div><div class="starItems"></div>
-        <div class="starItems"></div><div class="starItems"></div>
-        <div class="starItems"></div><div class="starItems"></div>
-        <div class="starItems"></div><div class="starItems"></div>
-        <div class="starItems"></div><div class="starItems"></div>
-        <div class="starItems"></div><div class="starItems"></div>
-        <div class="starItems"></div><div class="starItems"></div>
-        <div class="starItems"></div><div class="starItems"></div>
-        <div class="starItems"></div><div class="starItems"></div>
-        <div class="starItems"></div><div class="starItems"></div>
-        <div class="starItems"></div><div class="starItems"></div>
-        <div class="starItems"></div><div class="starItems"></div>
-        <div class="starItems"></div><div class="starItems"></div>
-        <div class="starItems"></div><div class="starItems"></div>
-        <div class="starItems"></div><div class="starItems"></div>
-        <div class="starItems"></div><div class="starItems"></div>
-        <div class="starItems"></div><div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div><div class="starItems"></div>
-        <div class="starItems"></div><div class="starItems"></div>
-        <div class="starItems"></div><div class="starItems"></div>
-        <div class="starItems"></div><div class="starItems"></div>
-        <div class="starItems"></div><div class="starItems"></div>
-        <div class="starItems"></div><div class="starItems"></div>
-        <div class="starItems"></div><div class="starItems"></div>
-        <div class="starItems"></div><div class="starItems"></div>
-        <div class="starItems"></div><div class="starItems"></div>
-        <div class="starItems"></div><div class="starItems"></div>
-        <div class="starItems"></div><div class="starItems"></div>
-        <div class="starItems"></div><div class="starItems"></div>
-        <div class="starItems"></div><div class="starItems"></div>
-        <div class="starItems"></div><div class="starItems"></div>
-        <div class="starItems"></div><div class="starItems"></div>
-        <div class="starItems"></div><div class="starItems"></div>
-        <div class="starItems"></div><div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div><div class="starItems"></div>
-        <div class="starItems"></div><div class="starItems"></div>
-        <div class="starItems"></div><div class="starItems"></div>
-        <div class="starItems"></div><div class="starItems"></div>
-        <div class="starItems"></div><div class="starItems"></div>
-        <div class="starItems"></div><div class="starItems"></div>
-        <div class="starItems"></div><div class="starItems"></div>
-        <div class="starItems"></div><div class="starItems"></div>
-        <div class="starItems"></div><div class="starItems"></div>
-        <div class="starItems"></div><div class="starItems"></div>
-        <div class="starItems"></div><div class="starItems"></div>
-        <div class="starItems"></div><div class="starItems"></div>
-        <div class="starItems"></div><div class="starItems"></div>
-        <div class="starItems"></div><div class="starItems"></div>
-        <div class="starItems"></div><div class="starItems"></div>
-        <div class="starItems"></div><div class="starItems"></div>
-        <div class="starItems"></div><div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div><div class="starItems"></div>
-        <div class="starItems"></div><div class="starItems"></div>
-        <div class="starItems"></div><div class="starItems"></div>
-        <div class="starItems"></div><div class="starItems"></div>
-        <div class="starItems"></div><div class="starItems"></div>
-        <div class="starItems"></div><div class="starItems"></div>
-        <div class="starItems"></div><div class="starItems"></div>
-        <div class="starItems"></div><div class="starItems"></div>
-        <div class="starItems"></div><div class="starItems"></div>
-        <div class="starItems"></div><div class="starItems"></div>
-        <div class="starItems"></div><div class="starItems"></div>
-        <div class="starItems"></div><div class="starItems"></div>
-        <div class="starItems"></div><div class="starItems"></div>
-        <div class="starItems"></div><div class="starItems"></div>
-        <div class="starItems"></div><div class="starItems"></div>
-        <div class="starItems"></div><div class="starItems"></div>
-        <div class="starItems"></div><div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div><div class="starItems"></div>
-        <div class="starItems"></div><div class="starItems"></div>
-        <div class="starItems"></div><div class="starItems"></div>
-        <div class="starItems"></div><div class="starItems"></div>
-        <div class="starItems"></div><div class="starItems"></div>
-        <div class="starItems"></div><div class="starItems"></div>
-        <div class="starItems"></div><div class="starItems"></div>
-        <div class="starItems"></div><div class="starItems"></div>
-        <div class="starItems"></div><div class="starItems"></div>
-        <div class="starItems"></div><div class="starItems"></div>
-        <div class="starItems"></div><div class="starItems"></div>
-        <div class="starItems"></div><div class="starItems"></div>
-        <div class="starItems"></div><div class="starItems"></div>
-        <div class="starItems"></div><div class="starItems"></div>
-        <div class="starItems"></div><div class="starItems"></div>
-        <div class="starItems"></div><div class="starItems"></div>
-        <div class="starItems"></div><div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div><div class="starItems"></div>
-        <div class="starItems"></div><div class="starItems"></div>
-        <div class="starItems"></div><div class="starItems"></div>
-        <div class="starItems"></div><div class="starItems"></div>
-        <div class="starItems"></div><div class="starItems"></div>
-        <div class="starItems"></div><div class="starItems"></div>
-        <div class="starItems"></div><div class="starItems"></div>
-        <div class="starItems"></div><div class="starItems"></div>
-        <div class="starItems"></div><div class="starItems"></div>
-        <div class="starItems"></div><div class="starItems"></div>
-        <div class="starItems"></div><div class="starItems"></div>
-        <div class="starItems"></div><div class="starItems"></div>
-        <div class="starItems"></div><div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        <div class="starItems"></div>
-        
+    <div>
+        <img src="images/stars.png" alt="" class="bgImage">
     </div>
 </body>
 </html>
